--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
       </nav><!-- #header-nav -->
     </header>
 
-
-
 <!--
+
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
@@ -90,11 +89,12 @@
               <a href="tel:410-602-5008">
                 <span>410-602-5008</span></a><div>* We Deliver</div>
             </li>
-          </ul><!-- #nav-list -->
-        </div><!-- .collapse .navbar-collapse -->
-      </div><!-- .container -->
-    </nav><!-- #header-nav -->
-  </header>-->
+          </ul>  #nav-list 
+        </div> .collapse .navbar-collapse 
+    </nav> #header-nav 
+  </header>
+
+-->
 
   <div id="call-btn" class="visible-xs">
     <a class="btn" href="tel:410-602-5008">
